feito a hero section, classificação e seção de produtos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,103 @@
         </div><!--nav-container-->
 
     </header>
+
+    <div class="hero-section">
+        <div class="hero-section-content">
+            <div class="hero-text">
+                <h1 class="hero-title"><span>Transforme</span> seu <br> apartamento em <br> um <span>refúgio
+                        natural</span>
+                </h1>
+                <button class="hero-btn">Explorar coleção</button>
+            </div>
+
+            <div class="img-hero">
+                <div>
+                    <img src="assets/imghero.png">
+                </div>
+            </div>
+        </div>
+    </div> <!-- hero-section -->
+
+
+    <div class="ratings">
+        <div class="ball">
+            <img src="assets/paw-print.svg">
+            <p>Plantas não tóxicas</p>
+        </div>
+        <div class="ball">
+            <img src="assets/ruler.svg">
+            <p>Espaços pequenos</p>
+        </div>
+        <div class="ball">
+            <img src="assets/Vector.svg">
+            <p>Pouca luz</p>
+        </div>
+        <div class="ball">
+            <img src="assets/Vector-1.svg">
+            <p>Esqueci de <br> regar</p>
+        </div>
+    </div> <!--ratings -->
+
+    <div class="section-products">
+        <div class="section-products-title">
+            <h2>Mais vendidas</h2>
+        </div>
+
+        <div class="section-cards-products">
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/santa-barbara.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Espada-de-Santa-Bárbara</p>
+                    <div class="card-product-price">
+                        <p>R$28,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/zamioculca.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Zamioculca</p>
+                    <div class="card-product-price">
+                        <p>R$40,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/ninho-de-passarinho.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Ninho-de-passarinho</p>
+                    <div class="card-product-price">
+                        <p>R$32,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/costela-de-adao.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Costela-de-Adão</p>
+                    <div class="card-product-price">
+                        <p>R$60,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
