feito o resto do site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <nav class="nav-bar">
                 <div class="logo">
-                    <img src="/assets/Logo.png">
+                    <img src="/assets/logo-branca.png">
                 </div>
 
                 <div class="menu">
@@ -74,7 +74,7 @@
         </div>
     </div> <!--ratings -->
 
-    <div class="section-products">
+    <div class="section-products mais-vendidas">
         <div class="section-products-title">
             <h2>Mais vendidas</h2>
         </div>
@@ -130,9 +130,236 @@
                     </div>
                 </div>
             </div>
+            <!-- Setas nas extremidades -->
+            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="arrow-section-products">
+                <path
+                    d="M14 9L19 14M19 14L14 19M19 14H9M1.5 14C1.5 20.9036 7.09644 26.5 14 26.5C20.9036 26.5 26.5 20.9036 26.5 14C26.5 7.09644 20.9036 1.5 14 1.5C7.09644 1.5 1.5 7.09644 1.5 14Z"
+                    stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="arrow-section-products">
+                <path
+                    d="M14 9L19 14M19 14L14 19M19 14H9M1.5 14C1.5 20.9036 7.09644 26.5 14 26.5C20.9036 26.5 26.5 20.9036 26.5 14C26.5 7.09644 20.9036 1.5 14 1.5C7.09644 1.5 1.5 7.09644 1.5 14Z"
+                    stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
         </div>
     </div>
 
+    <div class="section-products plantas-pendentes">
+        <div class="section-products-title">
+            <h2>Plantas pendentes</h2>
+        </div>
+
+        <div class="section-cards-products">
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/Jibóia.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Jibóia</p>
+                    <div class="card-product-price">
+                        <p>R$38,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/filodendro.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Filodentro-cordato</p>
+                    <div class="card-product-price">
+                        <p>R$24,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/dinheiro.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Dinheiro-em-penca</p>
+                    <div class="card-product-price">
+                        <p>R$50,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-product">
+                <div class="card-product-img">
+                    <img src="assets/peperomia.png">
+                </div>
+                <div class="card-product-info">
+                    <p>Peperômia</p>
+                    <div class="card-product-price">
+                        <p>R$25,00</p>
+                        <button>+ Carrinho</button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Setas nas extremidades -->
+            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="arrow-section-products">
+                <path
+                    d="M14 9L19 14M19 14L14 19M19 14H9M1.5 14C1.5 20.9036 7.09644 26.5 14 26.5C20.9036 26.5 26.5 20.9036 26.5 14C26.5 7.09644 20.9036 1.5 14 1.5C7.09644 1.5 1.5 7.09644 1.5 14Z"
+                    stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+            <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg"
+                class="arrow-section-products">
+                <path
+                    d="M14 9L19 14M19 14L14 19M19 14H9M1.5 14C1.5 20.9036 7.09644 26.5 14 26.5C20.9036 26.5 26.5 20.9036 26.5 14C26.5 7.09644 20.9036 1.5 14 1.5C7.09644 1.5 1.5 7.09644 1.5 14Z"
+                    stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+        </div>
+
+    </div>
+
+    <section class="kit-section">
+        <div class="kit-title">
+            <h2>Monte seu KIT</h2>
+        </div>
+
+        <div class="kit-content">
+            <div class="card-kit-wrapper">
+                <img src="assets/icons/seta-esquerda.svg" class="arrow">
+                <div class="card-kit">
+                    <div class="kit-product">
+                        <img src="assets/comigo-niguem.png">
+                    </div>
+                    <div class="kit-info">
+                        <p>Comigo-ninguém-pode</p>
+                        <p>R$ 45,00</p>
+                    </div>
+                </div>
+                <img src="assets/icons/seta-direita.svg" class="arrow">
+            </div>
+
+            <span class="plus-sign">+</span>
+
+            <div class="card-kit-wrapper">
+                <img src="assets/icons/seta-esquerda.svg" class="arrow">
+                <div class="card-kit">
+                    <div class="kit-product">
+                        <img src="assets/adubo.png">
+                    </div>
+                    <div class="kit-info">
+                        <p>Húmus de minhoca</p>
+                        <p>R$ 20,00</p>
+                    </div>
+                </div>
+                <img src="assets/icons/seta-direita.svg" class="arrow">
+            </div>
+
+            <span class="plus-sign">+</span>
+
+            <div class="card-kit-wrapper">
+                <img src="assets/icons/seta-esquerda.svg" class="arrow">
+                <div class="card-kit">
+                    <div class="kit-product">
+                        <img src="assets/substrato.png">
+                    </div>
+                    <div class="kit-info">
+                        <p>Substrato</p>
+                        <p>R$ 20,00</p>
+                    </div>
+                </div>
+                <img src="assets/icons/seta-direita.svg" class="arrow">
+            </div>
+        </div>
+    </section>
+
+    <section class="suculentas">
+        <div class="suc-grande">
+            <img src="assets/suculentas.png">
+        </div>
+
+        <div class="suc-pequenas">
+            <img src="assets/mesa.png">
+            <div class="hands-button">
+                <img src="assets/mão.png">
+                <button>Conhecer</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="depoiment">
+        <div class="depoiment-title">
+            <h2>Depoimentos</h2>
+        </div>
+
+        <div class="todos-dep-container">
+            <div class="todos-dep">
+                <div class="dep1">
+                    <h3>Mariana S., São Paulo/SP</h3>
+                    <p>"Eu sempre tive 'dedo podre' para plantas, mas o suporte de vocês mudou tudo! Comprei minha
+                        primeira
+                        Jiboia e o adubo orgânico recomendado, e ela está enorme. A embalagem de envio é impecável, a
+                        planta
+                        chegou fresquinha."</p>
+                </div>
+
+                <div class="dep2">
+                    <h3>Lucas H., Curitiba/PR</h3>
+                    <p>"Comprei o kit para iniciantes e adorei que as instruções de cuidado vêm bem explicadinhas. O
+                        adubo
+                        não tem cheiro forte,
+                        o que é ótimo para quem mora em apartamento. Recomendo muito!"</p>
+                </div>
+
+                <div class="dep3">
+                    <h3>Roberto T., Joinville/SC</h3>
+                    <p>"O que me ganhou foi a variedade de adubos específicos. Estava difícil achar um bom NPK para
+                        minhas
+                        orquídeas e o resultado apareceu em duas semanas. Entrega rápida e site muito fácil de navegar."
+                    </p>
+                </div>
+            </div>
+
+            <div class="plant-depoimento">
+                <img src="assets/plant-depoimento.png">
+            </div>
+        </div> <!-- todos-dep -->
+
+
+    </section>
+
+    <section class="full-footer">
+        <div class="logo-footer">
+            <img src="assets/logo-verde.png">
+        </div>
+
+        <div class="footer-info">
+            <div class="contato-footer">
+                <h3>Contato</h3>
+                <p>(xx) xxxxx-xxxx <br />
+                    cantinhoverde@gmail.com <br />
+                    372469-7878
+                </p>
+            </div>
+
+            <div class="links-footer">
+                <h3>Links</h3>
+                <p>Minha conta <br />
+                    Rastrear pedido <br />
+                    Dúvidas frequentes
+                </p>
+            </div>
+
+            <div class="institucional-footer">
+                <h3>Institucional</h3>
+                <p>Sobre nós <br />
+                    Políticas
+                </p>
+            </div>
+        </div>
+
+    </section>
 </body>
 
 </html>
